example code, producer-consumer

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,25 +1,22 @@
 cmake_minimum_required(VERSION 3.10)
-project(main)
+project(disruptor_cpp)
 
 set(CMAKE_CXX_STANDARD 20)
 set(CMAKE_CXX_STANDARD_REQUIRED ON)
 set(CMAKE_CXX_EXTENSIONS OFF)
 
-add_executable(main src/main.cpp)
+add_executable(disruptor_cpp src/main.cpp)
 
-if(EXISTS "${CMAKE_CURRENT_SOURCE_DIR}/include")
-    target_include_directories(main PRIVATE ${CMAKE_CURRENT_SOURCE_DIR}/include)
-endif()
-target_include_directories(main PRIVATE ${CMAKE_CURRENT_SOURCE_DIR}/src)
+target_include_directories(disruptor_cpp PRIVATE ${CMAKE_CURRENT_SOURCE_DIR}/src)
 
 set(
     DISRUPTOR_HEADERS
-    src/ring_buffer.h
-    src/sequence.h
-    src/sequencer.h
-    src/wait_strategies.h
-    src/sequence_barrier.h
-    src/event_handler.h
-    src/event_processor.h
+    src/disruptor/ring_buffer.h
+    src/disruptor/sequence.h
+    src/disruptor/sequencer.h
+    src/disruptor/wait_strategies.h
+    src/disruptor/sequence_barrier.h
+    src/disruptor/event_handler.h
+    src/disruptor/event_processor.h
 )
-target_sources(main PRIVATE ${DISRUPTOR_HEADERS})
+target_sources(disruptor_cpp PRIVATE ${DISRUPTOR_HEADERS})
